--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,3 @@
-# ==========================================
-#   Unity Project - A Test Framework for C
-#   Copyright (c) 2007 Mike Karlesky, Mark VanderVoord, Greg Williams
-#   [Released under MIT License. Please refer to license.txt for details]
-# ==========================================
-
-#We try to detect the OS we are running on, and adjust commands as needed
 ifeq ($(OS),Windows_NT)
   ifeq ($(shell uname -s),) # not in a bash-like shell
 	CLEANUP = del /F /Q
@@ -25,7 +18,7 @@ ifeq ($(shell uname -s), Darwin)
 C_COMPILER=clang
 endif
 
-UNITY_ROOT=third_party/Unity
+UNITY_ROOT=../third_party/Unity
 
 CFLAGS=-std=c99
 CFLAGS += -Wall
@@ -47,13 +40,10 @@ TARGET = $(TARGET_BASE)$(TARGET_EXTENSION)
 SRC_FILES=\
   $(UNITY_ROOT)/src/unity.c \
   $(UNITY_ROOT)/extras/fixture/src/unity_fixture.c \
-  test/LedDriverTestRunner.c \
-  src/LedDriverTest.c \
-  src/led_driver/LedDriver.c \
-  AllTests.c
+  LedDriverTest.c
 
 
-INC_DIRS=-Isrc -Iinclude -I$(UNITY_ROOT)/src -I$(UNITY_ROOT)/extras/fixture/src
+INC_DIRS=-Isrc -I$(UNITY_ROOT)/src -I$(UNITY_ROOT)/extras/fixture/src
 SYMBOLS=
 
 all: clean default
@@ -64,6 +54,3 @@ default:
 
 clean:
 	$(CLEANUP) $(TARGET)
-
-ci: CFLAGS += -Werror
-ci: default
